syntax = "proto3";

package zksync.config;

message CircuitIdRoundTuple {
  optional uint32 circuit_id = 1; // required; u8
  optional uint32 aggregation_round = 2; // required; u8
}

message FriProverGroup {
  repeated CircuitIdRoundTuple group_0 = 1;
  repeated CircuitIdRoundTuple group_1 = 2;
  repeated CircuitIdRoundTuple group_2 = 3;
  repeated CircuitIdRoundTuple group_3 = 4;
  repeated CircuitIdRoundTuple group_4 = 5;
  repeated CircuitIdRoundTuple group_5 = 6;
  repeated CircuitIdRoundTuple group_6 = 7;
  repeated CircuitIdRoundTuple group_7 = 8;
  repeated CircuitIdRoundTuple group_8 = 9;
  repeated CircuitIdRoundTuple group_9 = 10;
  repeated CircuitIdRoundTuple group_10 = 11;
  repeated CircuitIdRoundTuple group_11 = 12;
  repeated CircuitIdRoundTuple group_12 = 13;
}
